[gd_scene load_steps=24 format=3 uid="uid://dqnaqj8yb6hwd"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_ofpvf"]
[ext_resource type="Texture2D" uid="uid://kwtn51cg7kbk" path="res://assets/sprites/player/knight_full.png" id="2_vhjuk"]
[ext_resource type="Texture2D" uid="uid://delmnwiv40q4k" path="res://assets/sprites/excalibur.png" id="3_85lmk"]

[sub_resource type="AtlasTexture" id="AtlasTexture_31nrb"]
atlas = ExtResource("2_vhjuk")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_owqtn"]
atlas = ExtResource("2_vhjuk")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eoqbs"]
atlas = ExtResource("2_vhjuk")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sm030"]
atlas = ExtResource("2_vhjuk")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6vwe3"]
atlas = ExtResource("2_vhjuk")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ncbok"]
atlas = ExtResource("2_vhjuk")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dlw7i"]
atlas = ExtResource("2_vhjuk")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w5w2k"]
atlas = ExtResource("2_vhjuk")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mntf7"]
atlas = ExtResource("2_vhjuk")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a730n"]
atlas = ExtResource("2_vhjuk")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cob4t"]
atlas = ExtResource("2_vhjuk")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ti157"]
atlas = ExtResource("2_vhjuk")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vr4dn"]
atlas = ExtResource("2_vhjuk")
region = Rect2(96, 64, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_81gkq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_31nrb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_owqtn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eoqbs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sm030")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6vwe3")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ncbok")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dlw7i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w5w2k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mntf7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a730n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cob4t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ti157")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vr4dn")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_bvcm0"]
radius = 5.0

[sub_resource type="AtlasTexture" id="AtlasTexture_6qnyo"]
atlas = ExtResource("3_85lmk")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mw0ie"]
atlas = ExtResource("3_85lmk")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ndxpc"]
atlas = ExtResource("3_85lmk")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w7qr7"]
atlas = ExtResource("3_85lmk")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_hxe5v"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6qnyo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mw0ie")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ndxpc")
}],
"loop": false,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w7qr7")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[node name="Player" type="CharacterBody2D"]
z_index = 5
collision_layer = 2
script = ExtResource("1_ofpvf")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_81gkq")
animation = &"run"
autoplay = "idle"
frame_progress = 0.44196

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_bvcm0")

[node name="WeaponSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(15, -15)
sprite_frames = SubResource("SpriteFrames_hxe5v")
animation = &"attack"

[connection signal="animation_finished" from="WeaponSprite" to="." method="_on_weapon_sprite_animation_finished"]
[connection signal="frame_changed" from="WeaponSprite" to="." method="_on_weapon_sprite_frame_changed"]
[connection signal="ready" from="WeaponSprite" to="." method="_on_weapon_sprite_ready"]
